font changes and styles

--- a/index.html
+++ b/index.html
@@ -4,15 +4,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Trirong:ital,
-    wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1
-    ,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400
-..800;1,400..800&display=swap" rel="stylesheet">
+<link
+    href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@400;900&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Sevillana&family=Shippori+Mincho+B1&family=Sofia&family=Young+Serif&display=swap"
+    rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@400;900&family=Sevillana&family=Shippori+Mincho+B1&display=swap"
+    rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@400;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="awesome/all.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@400;900&family=Sevillana&family=Shippori+Mincho+B1&family=Young+Serif&display=swap"
+    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@400;900&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Sevillana&family=Shippori+Mincho+B1&family=Young+Serif&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <!--BANNER SECTION STARTS-->
@@ -27,11 +42,10 @@
                         <li class="list-item"><a href="#Home" class="list-link">HOME</a></li>
                         <li class="list-item"><a href="#about-container" class="list-link">ABOUT</a></li>
                         <li class="list-item"><a href="#services" class="list-link">SERVICES</a></li>
-                        <li class="list-item"><a href="#Contact" class="list-link">CONTACT</a></li>
+                        <li class="list-item"><a href="#contact-section" class="list-link">CONTACT</a></li>
                     </ul>
                 </div>
                 <div class="menu-icon" style="display: none;">
-                    <h1>MENU</h1>
                 </div>
             </div>
         </div>
@@ -86,7 +100,7 @@
             <!-- Services starts -->
             <section class="service-secttion" id="services">
                 <div class="services-container">
-                    <h1 style="color: aqua;">WHAT <span style="color: white;">WE</span> <span style="color: rgb(242, 3, 246); font-family: Trirong, serif;">OFFERS</span></h1>
+                    <h1 style="color: aqua;">WHAT <span style="color: white;">WE</span> <span style="color: rgb(242, 3, 246); font-family: Trirong, serif; font-size: larger;">OFFERS</span></h1>
                     <hr color="red">
                     <ul class="service-unordered">
                         <li id="list-1">1</li>
@@ -119,7 +133,7 @@
             <!-- OUR TEAM and CONTACTS starts here -->
             <section class="team-section" id="Contacts">
                 <div class="team-container">
-                    <h1>OUR <span style="color: aqua;">TEAM</span></h1>
+                    <h1> OUR <span style="color: aqua; " >TEAM</span></h1>
                     <hr color="red">
                     <div class="team-all">
                         
@@ -154,7 +168,7 @@
     </main>
                     <!-- contact us  -->
                     
-                    <section class="contact-section">
+                    <section class="contact-section" id="contact-section">
                         <div class="contact-container">
                             <h1 style="color: rgb(242, 3, 246);">GET <span style="color: #ffff;">IN</span> <span
                                     style="color: aqua;">TOUCH</span></h1>
