changes in styling

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
             </div>
         </div>
         <div class="banner-text-container">
-            <div class="banner-info" data-aos="fade-up" data-aos-duration="3000">
+            <div class="banner-info" data-aos="fade-down" data-aos-duration="3000">
                 <h1>TAITU</h1>
                 <h2>Ethiopian Restaurant<br>
                 <span class="auto-type" style="color: aqua;"></span>
                 </h2>
-                <p>Enter our gastronomic sanctuary where flavors dance and memories are made.From our kitchen to your table,
+                <p data-aos="fade-down" data-aos-duration="3000">Enter our gastronomic sanctuary where flavors dance and memories are made.From our kitchen to your table,
                     immerse yourself in a symphony of tastes crafted with passion and precision.Your culinary adventure awaits.
                     Welcome !
                 </p>
-                <button>
+                <button >
                     <a href="#">CHECK OUR MENU</a>
                 </button>
             </div>
@@ -80,18 +80,18 @@
                 <h1>ABOUT <span class="about-span">TAITU</span></h1>
                 <hr color="red">
                 <div class="about-items">
-                    <div class="item-one" data-aos="fade-right" data-aos-duration="3000">
+                    <div class="item-one">
                     </div>
-                    <div class="item-two" data-aos="fade-left" data-aos-duration="3000">
+                    <div class="item-two">
                         <h3>Who we are</h3><hr>
                         <p>Nestled in the heart of Kilimajaro, <spsan style="color: aqua; font-weight: 1000;">Taitu Restaurant</spsan> invites you on culinary journey
                             that tantalizes the senses and celebrates the rich flavors of East African cuisine.<br>
                             At <spsan style="color: aqua;font-weight: 1000;">Taitu</spsan> every dish is a masterpiece crafted with care and authenticity,blending traditional
-                            recipes with contemporary twist to create a dining experience that is both familiar and innovative.<br>
+                            recipes with contemporary twist to create a dining experience that is both familiar and innovative.<br><br>
                             Our warm and inviting ambiance welcomes guests from near and far,offering a haven where friends 
-                            and families gather to share laughter, stories, and exceptional food.<br>
+                            and families gather to share laughter, stories, and exceptional food.<br><br>
                             Whether you seek for romantic dinner for two or lively feast with loved ones,<spsan style="color: aqua; font-weight: 1000;">Taitu Restaurant</spsan> promises an 
-                            unforgettable culinary adventure.<br>
+                            unforgettable culinary adventure.<br><br>
                             Come and savor the flavors of Kilimanjaro at <spsan style="color: aqua; font-weight: 1000;">Taitu Restaurant</spsan> ,where every meal is a celebration of culture,
                             community,and the joy of good food.
                         </p>
@@ -114,7 +114,7 @@
                         <li id="list-5">5</li>
                     </ul>
                     <div class="service-items" id="services">
-                        <div class="service-contents" data-aos="fade-right" data-aos-duration="3000">
+                        <div class="service-contents" data-aos="fade-up" data-aos-duration="3000">
                             <h2>Dining</h2>
                             <p>We offers unforgettable journey into the heart of Ethiopian cuisine.
                                 With a menu rich in trtaditional flavors and welcoming ambiance guests experience the 
@@ -126,7 +126,7 @@
                             </p>
                             <button><a href="#">ORDER NOW</a></button>
                         </div>
-                        <div class="service-images" data-aos="fade-left" data-aos-duration="3000">
+                        <div class="service-images" data-aos="fade-up" data-aos-duration="3000">
                             
                             <img src="./images/food2.jpg" height="300px" width="100%" style="border-radius: 10px;">
                         </div>
@@ -146,23 +146,23 @@
                             </div>
                             <div class="team-data">
                                 <h3>Restaurant Manager</h3>
-                                <h4>Suleyman Muntari</h4>
+                                <h4>Suleyman Ramadhan</h4>
                             </div>
                         </div>
                         <div class="team-info">
                             <div class="team-image2">
                             </div>
                             <div class="team-data">
-                                <h3>Restaurant Manager</h3>
-                                <h4>Suleyman Muntari</h4>
+                                <h3>Chief Cooker</h3>
+                                <h4>Gilbert Gervas</h4>
                             </div>
                         </div>
                         <div class="team-info">
                             <div class="team-image3">
                             </div>
                             <div class="team-data">
-                                <h3>Restaurant Manager</h3>
-                                <h4>Suleyman Muntari</h4>
+                                <h3>Waiter</h3>
+                                <h4>Saleh Sarumbo</h4>
                             </div>
                         </div>
                     </div>
@@ -212,14 +212,14 @@
                     <section class="message-section">
                         <div class="message-container">
                             <div class="message-sections">
-                                <div class="message-info" data-aos="fade-left" data-aos-duration="3000">
+                                <div class="message-info" data-aos="fade-up" data-aos-duration="3000">
                                     <h2>Message Us</h2>
                             <p>Hello. If you wish to order a certain item please do not send an sms here instead you can go directly to the corresponding 
                                 section.This is only for suggestions or recommendations so as to improve our services.
                                 Thanks for Contacting Us. <br>Excellent service for our customer.
                             </p>
                                 </div>
-                                <div class="message-form" data-aos="fade-right" data-aos-duration="3000">
+                                <div class="message-form" data-aos="fade-up" data-aos-duration="3000">
                                     <form>
                                         <label >First Name</label><br>
                                         <input type="text" id="fname"><br>
