--- a/index.html
+++ b/index.html
@@ -234,6 +234,10 @@
                         </div>
                     </section>
                     </section>
+                    <footer>
+                       <center><h2 style="color: blue; ">Designed by <span style="color: blueviolet;">Said Hassan</span></h2>
+                            <p>Copyright &copy;. All right reserved</p></center>
+                    </footer>
 </body>
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 <script>
